# kendono

./: .bashrc  .gitignore  CMakeLists.txt  Cargo.toml  Dockerfile  README.md  Untitled.md  check.sh  config.sh  exec.sh  index.md  init.sh  mkdir.sh  publish.sh  reset.sh  rsync.sh  setup.sh  sortspec.md  sync.sh  touch.sh  vercel.json  vscode.code-workspace
.check/: cmake.sh
.cmake/: config.cmake  functions.cmake
.obsidian/: app.json  community-plugins.json  core-plugins.json  hotkeys.json
.scripts/: cargo.sh  cmake.sh  cmake_c.sh  cmake_cc.sh  publish.sh  silence.sh  tcmake.sh  touch.sh
.source/: README.md
.task/: Untitled.md  base.md  dst.md  glyph.md  processed_base.md  remove.py  script.py  script.sh  src.md  src1.md  src10.md  src11.md  src2.md  src3.md  src4.md  src5.md  src6.md  src7.md  src8.md  src9.md  trim.py  trim_cjk.py
.utils/: cargo.sh  cmake.sh  publish.sh  r.sh  sync.sh
00_/: README.md
01_ko-kp/: README.md
01_ko-kr/: README.md
02_ko/: README.md
03_ja/: README.md
03_zh-cmn/: README.md
03_zh-cmn-sc/: README.md
03_zh-cmn-tc/: README.md
04_vi/: README.md
05_mn/: README.md
05_th/: README.md
05_tr/: README.md
0_/: README.md
1_en/: README.md
2_ja/: README.md
2_ko/: README.md
3_zh-cmn-sc/: README.md
3_zh-cmn-tc/: README.md
4_pt/: README.md
4_zh-yue-tc/: README.md
50_cs/: README.md
50_de/: README.md
50_id/: README.md
50_it/: README.md
50_ru/: README.md
50_tl/: README.md
50_uk/: README.md
5_es/: README.md
5_fr/: README.md
5_no-nno/: README.md
5_no-nob/: README.md
99_ar/: README.md
99_bn/: README.md
99_fa/: README.md
99_he/: README.md
99_hi/: README.md
99_mr/: README.md
99_ur/: README.md
Arabic Language/: README.md
Arabic, Saudi Arabia/: README.md
Cantonese/: README.md
Chinese Language/: README.md
Chinese, China/: README.md
Chinese, Hong Kong/: README.md
Chinese, Macau/: README.md
Chinese, Simplified/: README.md
Chinese, Taiwan/: README.md
Czech Language/: README.md
Czech, Czech Republic/: README.md
English/: Cangjie.md  Han.md  Kanken.md  Radical.md  Strokes.md  Unicode.md
English, Australia/: README.md
English, New Zealand/: README.md
English, United Kingdom/: README.md
English, United States/: README.md
French Language/: README.md
French, France/: README.md
German Language/: README.md
Germany, German/: README.md
Hebrew Language/: README.md
Hebrew, Israel/: README.md
Hindi Language/: README.md
Hindi, India/: README.md
Italian Language/: README.md
Italian, Italy/: README.md
Japanese/: README.md  漢検.md
Japanese Language/: README.md
Japanese, Japan/: README.md
Korean/: 일본한자검정.md  (+1 more)
cc/hello/: CMakeLists.txt  README.md
cc/hello-module/: CMakeLists.txt
cc/hello-module/src/: main.cc
(+769 files in other folders)
